<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="@color/backgroundLayout">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fab_content_desc"
        tools:ignore="MissingConstraints"
        app:srcCompat="@drawable/agregar" />

    <TextView
        android:id="@+id/Billboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Billboard"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:id="@+id/movie_card1"
        android:layout_height="100dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Billboard">

        <LinearLayout
            android:background="@color/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:paddingLeft="10dp"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:src="@drawable/harry_potter"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/NameHp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="15dp"
                android:text="@string/harry_potter_y_la_piedra_filosofal"
                android:textColor="@color/white" >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/qualificationHp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="15dp"
                android:text="9.6"
                android:textColor="@color/teal_200" >
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card2"
        android:layout_width="350dp"
        app:cardCornerRadius="8dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="15dp"
        android:background="@color/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Billboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardLayout">

            <ImageView
                android:id="@+id/imageView01"
                android:paddingLeft="10dp"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:src="@drawable/star_wars"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/NameSt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="15dp"
                android:text="@string/star_warsepisodio_3_la_venganza_de_los_sith"
                android:textColor="@color/white"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/qualificationSt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="15dp"
                android:text="7"
                android:textColor="@color/teal_200" >
            </TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>